addresses feedback from @sradack and @pschorf by  - making cluster-urls a positional argument  - using cond in main  - renaming last-modified-etag to token-etag  - lexicographic ordering  - simplify retrieve-token->latest-description, sync-token-on-clusters and perform-token-syncs  - adding request logging to make-http-request  - removing unnecessary defaults from make-http-request  - handling ISO8601 outputs and new include parameters in Waiter token endpoint  - removing redundant `seq` check on `description`  - throwing from make-http-request in case of error  - updating the syncer response format  - exiting 1 if there were errors during sync-ing